--- a/dependencies/webview/res/values/styles.xml
+++ b/dependencies/webview/res/values/styles.xml
@@ -1,11 +1,6 @@
 <resources>
-
 	<style name="FloatingActivityTheme" parent="@android:style/Theme.NoTitleBar.Fullscreen">
                 <item name="android:windowDisablePreview">true</item>
- 		<item name="android:windowIsTranslucent">true</item>
- 		<item name="android:windowBackground">@android:color/transparent</item>
-		<item name="android:windowContentOverlay">@null</item>
-		<item name="android:backgroundDimEnabled">true</item>
+ 		<item name="android:windowBackground">@android:color/black</item>
  	</style>
-
 </resources>
