--- a/dependencies/webview/res/values/styles.xml
+++ b/dependencies/webview/res/values/styles.xml
@@ -1,5 +1,5 @@
 <resources>
-	<style name="FloatingActivityTheme" parent="android:Theme.Black.NoTitleBar.Fullscreen">
+	<style name="FloatingActivityTheme" parent="@android:style/Theme.NoTitleBar.Fullscreen">
  		<item name="android:windowIsTranslucent">true</item>
  		<item name="android:windowBackground">@android:color/transparent</item>
 		<item name="android:windowContentOverlay">@null</item>
