--- a/dependencies/webview/res/values/styles.xml
+++ b/dependencies/webview/res/values/styles.xml
@@ -2,5 +2,6 @@
 	<style name="FloatingActivityTheme" parent="@android:style/Theme.NoTitleBar.Fullscreen">
  		<item name="android:windowBackground">@android:color/black</item>
 		<item name="android:windowContentOverlay">@null</item>
+		<item name="android:backgroundDimEnabled">true</item>
  	</style>
 </resources>
