--- a/dependencies/webview/res/values/styles.xml
+++ b/dependencies/webview/res/values/styles.xml
@@ -1,8 +1,12 @@
 <resources>
-	<style name="FloatingActivityTheme" parent="@android:style/Theme.NoTitleBar.Fullscreen">
- 		<item name="android:windowIsTranslucent">true</item>
- 		<item name="android:windowBackground">@android:color/transparent</item>
-		<item name="android:windowContentOverlay">@null</item>
-		<item name="android:backgroundDimEnabled">true</item>
- 	</style>
+    <style name="FloatingActivityTheme" parent="@android:style/Theme.NoTitleBar.Fullscreen">
+ 	<item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+	<item name="android:windowContentOverlay">@null</item>
+	<item name="android:backgroundDimEnabled">true</item>
+    </style>
+
+    <style name="FloatingActivityTheme.Launch" parent="@android:style/Theme.NoTitleBar.Fullscreen">
+        <item name="android:windowBackground">@android:color/black</item>
+    </style>
 </resources>
