--- a/dependencies/webview/res/values/styles.xml
+++ b/dependencies/webview/res/values/styles.xml
@@ -4,5 +4,8 @@
         <item name="android:windowBackground">@android:color/transparent</item>
 	<item name="android:windowContentOverlay">@null</item>
 	<item name="android:backgroundDimEnabled">true</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
     </style>
 </resources>
