--- a/dependencies/webview/res/layout/webview_activity.xml
+++ b/dependencies/webview/res/layout/webview_activity.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
-  android:background="@android:color/background_dark">
+  android:background="@android:color/black">
 
   <FrameLayout android:id="@+id/webViewPlaceholder"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@android:color/background_dark"/>
+    android:background="@android:color/black"/>
 
 </LinearLayout>
